# lineas

./: .gitignore  Cargo.toml  README.md
benches/: main.rs  util.rs
benches/ops/: det.rs  mod.rs  mult.rs
book/: book.toml
book/src/: README.md  SUMMARY.md  install.md  matrix_intro.md  operations.md
docs/: colvector.md  matrix.md  vector.md
src/: complex_ops.rs  constants.rs  decompose.rs  display.rs  generics.rs  impls.rs  lib.rs  ops.rs  prelude.rs  traits.rs  vector_ops.rs
src/polynomials/: mod.rs  ops.rs  plotting.rs  prelude.rs
tests/: complex.rs  decompose.rs  elementwise.rs  generics.rs  macros.rs  ops.rs  polynomials.rs  qol.rs  util.rs  vector.rs  vector_ops.rs
web/: index.html
web/book/: 404.html  decomp.html  index.html  install.html  matrix_intro.html  operations.html  print.html  searchindex.js  searchindex.json
