[package]
name = "lineas"
description = "A mathematical linear algebra library for Rust"
version = "0.1.1"
edition = "2021"
authors = ["nxe<62428909+RosiePuddles@users.noreply.github.com>"]
categories = ["mathematics"]
license = "GPL-3.0-only"
repository = "https://github.com/RosiePuddles/lineas"
homepage = "https://github.com/RosiePuddles/lineas"
documentation = "https://docs.rs/crate/lineas"
readme = "README.md"
keywords = ["maths", "linear-algebra"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
conv = "0.3.3"
itertools = "0.10.3"
plotters = { version = "0.3.3", optional = true}

[features]
plotting = ["plotters"]
