[package]
name = "lineas"
description = "A mathematical linear algebra library for Rust"
version = "0.2.0"
edition = "2021"
authors = ["nxe<62428909+RosiePuddles@users.noreply.github.com>"]
categories = ["mathematics"]
license = "GPL-3.0-only"
repository = "https://github.com/RosiePuddles/lineas"
homepage = "https://github.com/RosiePuddles/lineas"
documentation = "https://docs.rs/lineas/latest"
readme = "README.md"
keywords = ["maths", "linear-algebra", "algebra", "matrix", "vector"]
include = ["src", "docs"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
conv = "0.3.3"
itertools = "0.10.3"
num-integer = "0.1.45"
plotters = { version = "0.3.3", optional = true}

[features]
plotting = ["plotters"]

[dev-dependencies]
criterion = { version = "0.3", fetures = ["html_reports"]}

[[bench]]
name = "main"
harness = false
